--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <! DOCTYPE html>
 <head>
     <title>mdn_text (this is an example)</title>
-    <link href="styles/style.css" rel="stylesheet" type="txt/css">
+    <link href="style.css" rel="stylesheet" type="txt/css">
     <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
 </head>
 <body>
@@ -10,7 +10,7 @@
     <!-- Page content and rest of the tags here.... -->
     <!-- This is the actual area that gets shown in the browser -->
     <p>You are <em>beginning</em> to learn HTML.</p>
-    <img src="images/firefox.png" alt="firefox logo" />
+    <img src="firefox.png" alt="firefox logo" />
     
     <h1>Main heading in my document</h1>
     <!-- Note that is is h and 1 and not h one -->
@@ -19,6 +19,6 @@
     <li>And the second one</li>
     
     <button>Change user</button>
-    <script src="scripts/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
